# ech0

./: .dockerignore  .editorconfig  .gitignore  .goreleaser.yaml  Cargo.toml  Dockerfile  Dockerfile.release  Dockerfile.release.debian  README.adoc  README.md  ROADMAP.md  admin_surface.go  build.gradle.kts  consumer_group.go  consumer_group_helpers.go  consumer_group_test.go  cron.go  data.mv  direct.go  dlq.go  ech0.go  embedded_dlq_test.go  embedded_fanout_test.go  embedded_offset_test.go  embedded_pause_test.go  embedded_priority_test.go  embedded_replay_test.go  embedded_request_reply_test.go  embedded_subjects_test.go  embedded_test.go  fanout.go  go.mod  go.sum  gradle.properties  lifecycle.go  message.go  message_expiry_options.go  offset.go  options.go  options_config.go  (+18 more)
broker/: Cargo.toml  ack_offsets.go  admin.go  admin_api.go  admin_cluster_control.go  admin_cluster_ui.go  admin_gateway.go  admin_gateway_test.go  admin_governance_ui.go  admin_governance_ui_test.go  admin_ops.go  admin_routes.go  admin_template_funcs.go  admin_test.go  admin_ui.go  app.go  app_modules.go  benchmark_test.go  builder.go  cluster_coalesced_router.go  cluster_control.go  cluster_metadata.go  cluster_restart_helpers_test.go  cluster_restart_test.go  cluster_router.go  command_router.go  commit_offsets.go  concurrency.go  config.go  config_auth.go  config_defaults.go  config_paths.go  config_paths_test.go  config_test.go  data_shard_runtime.go  data_shard_spec.go  database_outbox.go  database_outbox_config.go  database_outbox_sql.go  database_outbox_test.go  (+178 more)
broker/admin_templates/: acl_policies.html  cluster.html  dashboard.html  governance.html  group.html  ops.html  topic_messages.html  topics.html
broker/examples/: smoke_all.rs  smoke_direct.rs  smoke_direct_dual.rs  smoke_e2e.rs
broker/examples/shared/: mod.rs
broker/src/: admin.rs  builder.rs  config.rs  lib.rs  logging.rs  main.rs  metrics.rs  ops_state.rs  producer_state.rs  raft.rs  server.rs  service.rs
broker/src/admin/: api.rs  dashboard.rs  groups.rs  health.rs  models.rs  topics.rs
broker/src/di/: admin_module.rs  bootstrap_module.rs  config_module.rs  lifecycle_module.rs  mod.rs  network_module.rs  runtime_module.rs  (+1 more)
broker/templates/: base.html  dashboard.html  groups.html  topic_messages.html  topics.html
(+360 files in other folders)
