[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
  "broker",
  "direct",
  "protocol",
  "queue",
  "store",
  "transport",
]

[workspace.dependencies]
store = { path = "store" }
thiserror = "2.0"
bytes = "1.11"
redb = "3.1"
crc32fast = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", 'net'] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2.4"
figment2 = { version = "0.11.4", features = ["toml", "env"] }
dotenvy = "0.15.7"
openraft = { version = "0.9.21", features = ["serde", "storage-v2"] }
dashmap = "6"
