[package]
name = "broker"
version.workspace = true
edition.workspace = true

[dependencies]
bytes.workspace = true
store.workspace = true
queue = { path = "../queue" }
direct = { path = "../direct" }
protocol = { path = "../protocol" }
transport = { path = "../transport" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
figment2.workspace = true
dotenvy.workspace = true
openraft.workspace = true
