[package]
name = "broker"
version.workspace = true
edition.workspace = true

[dependencies]
bytes.workspace = true
store.workspace = true
scheduler.workspace = true
queue = { path = "../queue" }
direct = { path = "../direct" }
protocol = { path = "../protocol" }
transport = { path = "../transport" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
figment2.workspace = true
dotenvy.workspace = true
openraft.workspace = true
axum = "0.8.8"
prometheus = "0.14.0"
askama = "0.15.6"
fluxdi = { version = "1.2.2", features = ["thread-safe", "tracing", "metrics", "prometheus"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
